new food / drinks menu IMG

--- a/themes/laurel-leaf/pages/food-drinks.htm
+++ b/themes/laurel-leaf/pages/food-drinks.htm
@@ -1,13 +1,11 @@
-title = 'Food & Drinks'
-meta_description = 'Burger, Riesenschwarzbrote, Spareribs, Fingerfood Körberl in verschiedenen Varianten - ein wöchentlich wechselndes Mittagsmenü. Vielfältige Biere, Cider, uvm.'
-url = '/food-drinks'
-layout = default
+title = "Food & Drinks"
+url = "/food-drinks"
+layout = "default"
+meta_description = "Burger, Riesenschwarzbrote, Spareribs, Fingerfood Körberl in verschiedenen Varianten - ein wöchentlich wechselndes Mittagsmenü. Vielfältige Biere, Cider, uvm."
+is_hidden = 0
 
 [lunchoffers]
-[foods]
-[drinks]
 ==
-
 
 <div class="container">
 
@@ -39,58 +37,15 @@ layout = default
 
         <!-- Food -->
         <div id="food" role="tabpanel" class="tab-pane fade in active">
-            <div class="text-center">
-                <h1 class="hidden-xs">FOOD</h1>
-            </div>
-
-
-            <div class="row">
-                <div class="col-xs-10 col-xs-offset-1 hidden-sm hidden-md hidden-lg">
-                    {{ form_ajax('foods::onFilterCategories', { update: { 'site/food/foodwrapper': '#foodWrapper' } }) }}
-                    <div id="FoodCategoriesFilter">
-                        <select class="wide" name="Filter[foodcategory]">
-                            <option value="">Alle Speisen</option>
-                            {% for category in categories %}
-                                <option value="{{ category.id }}">{{ category.name }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                    {{ form_close() }}
-                </div>
-            </div>
-
-            <div id="foodWrapper">{% partial 'site/food/foodwrapper' %}</div>
-
-            {% partial 'site/food/bestellsdazu' %}
-
-            {% partial 'site/food/spanferkel' %}
-
-            {% partial 'site/food/allergene' %}
-
+            
+            {% partial 'food' %}
+            
         </div>
 
         <!-- Drinks -->
         <div id="drinks" role="tabpanel" class="tab-pane fade in">
-            <div class="text-center">
-                <h1 class="hidden-xs">DRINKS</h1>
-            </div>
 
-            <div class="row">
-                <div class="col-xs-10 col-xs-offset-1 hidden-sm hidden-md hidden-lg">
-                    {{ form_ajax('drinks::onFilterDrinkCategories', { update: { 'site/drink/drinkwrapper': '#drinkWrapper' } }) }}
-                    <div id="DrinkCategoriesFilter">
-                        <select class="wide" name="Filter[drinkcategory]">
-                            <option value="">Alle Drinks</option>
-                            {% for category in drinkcategories %}
-                                <option value="{{ category.id }}">{{ category.name }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                    {{ form_close() }}
-                </div>
-            </div>
-
-            <div id="drinkWrapper">{% partial 'site/drink/drinkwrapper' %}</div>
+            {% partial 'drinks' %}
 
         </div>
 
@@ -103,8 +58,9 @@ layout = default
                             Mittagsangebot
                         </h1>
                         <p><em>
-                                wähle täglich Montags - Freitags jeweils von 11°° - 17°° aus 3 unterschiedlichen Menüs
-                                mit Suppe
+                                wähle täglich Montags - Freitags jeweils von 11°° - 17°° <br>
+                                aus 3 unterschiedlichen Menüs
+                                mit wahlweise Suppe oder Dessert
                             </em></p>
                 <!-- Wenn Mittagsmenü vorhanden -->
                 {% if lunchoffer_weekly|length %} 
