content from live version

--- a/themes/laurel-leaf/pages/home.htm
+++ b/themes/laurel-leaf/pages/home.htm
@@ -77,6 +77,12 @@ use Milo\HeroImage\Models\HeroImage;
 </div>
 {% endif %} <!-- End Sports TV Section -->
 
+{#
+{% 
+ partial 'cider-verkostung.htm' 
+%}
+#}
+
 <!-- Billard & Darts Section -->
 <div id="billard-darts" class="jumbotron red-gradient">
 	<div class="bricks">	
